fix issues with range slider overlap and changed some css

--- a/css/scatter.css
+++ b/css/scatter.css
@@ -28,12 +28,12 @@
 }
 
 .sel-range {
-	stroke: #9ccc65;
+	stroke: #4db8ff;
 	stroke-width: 8px;
 }
 
 .sliderhandle {
-	fill: #e0f7fa;
+	fill: #fff;
 	stroke: #000;
 	stroke-opacity: 0.5;
 	stroke-width: 1.25px;
