--- a/css/structure.css
+++ b/css/structure.css
@@ -15,8 +15,8 @@ body {
 	grid-gap: 10px;
 	margin: 0px 50px;
 	height: 95%;
-	border-left: 2px solid #ddd;
-	border-right: 2px solid #ddd;
+	border-left: 1px solid #ddd;
+	border-right: 1px solid #ddd;
 }
 
 .box {
@@ -27,7 +27,7 @@ body {
 #heading {
 	/* background-color: #5962ee; */
 	height: 65px;
-	border-bottom: 2px solid #ddd;
+	border-bottom: 1px solid #ddd;
 	margin: 0px 50px;
 }
 
@@ -43,7 +43,7 @@ body {
 	font-size: 20px;
 	color: #000;
 	margin-top: 0px;
-	text-align: left;
+	text-align: center;
 }
 
 @media screen and (max-width: 1600px) {
